src/alefba-src/src/stylesheets/main-section.scss
@font-face {
    font-family: iran-yekan;
    src: url(../assets/fonts/IRANYekan.ttf);
}

@font-face {
    font-family: IRMitra;
    src: url(../assets/fonts/Mitra.ttf) format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: IRMitra;
    src: url('../assets/fonts/IRMitraBold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

#icon-title-group {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 4.166666666666666vh;
    width: 5.46875vw;
    margin-right: -6vw;
}

#title {
    font-size: 1.3vw;
    color: white;
    font-family: iran-yekan, serif;
}

#icon {
    height: 4.166666666666666vh;
    width: 2.34375vw;
}

#mobile-links-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 30vw;
    width: 40vw;
    flex-direction: column;
}

.mobile-menu-link {
    text-decoration: none;
    color: white;
    text-align: center;
    font-size: 6vw;
    width: 40vw;
    height: 10vh;
    font-family: iran-yekan, serif;
}

#orange-text {
    color: #ff6200;
    height: 5.555555555555555vh;
    width: 17.96875vw;
    margin-top: 23vw;
    margin-right: 10.9375vw;
    margin-left: 71.875vw;
    position: absolute;
    font-style: normal;
    font-weight: 700;
    font-size: 2.22vw;
    font-family: iran-yekan, serif;
}

#pattern {
    position: absolute;
    width: 100%;
    z-index: 5;
}

#white-text {
    color: white;
    position: absolute;
    margin-top: 28vw;
    margin-right: 10.15vw;
    margin-left: 66.3vw;
    font-style: normal;
    font-weight: 300;
    text-align: right;
    font-size: 1.4vw;
    font-family: iran-yekan, serif;
    height: 4.861111111111112vh;
    width: 21.484375vw;
}

#main-screen {
    z-index: 10;
    transition: 0.6s;
}

#menu-screen {
    z-index: 20;
    transition: 0.6s;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    position: absolute;
}

#papers {
    position: absolute;
    margin-top: 12vw;
    margin-left: 10.9375vw;
    height: 55.55555555555556vh;
    width: 35.15625vw;
}

#paper-image {
    height: auto;
    width: 85%;
}

#hamburger-button {
    opacity: 0;
}

#hamburger-icon-group {
    z-index: 100;
    width: 75vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    margin-left: 13vw;
    margin-top: 4.5vh;
    position: absolute;
}

@media screen and (max-width: 500px) {
    #hamburger-button {
        opacity: 1;
    }

    #title {
        font-size: 5vw;
        padding-right: 1.5vw;
    }

    #icon {
        height: 5.28169014084507vh;
        width: 8.333333333333332vw;
    }

    #icon-title-group {
        width: 20vw;
        margin-right: 0;
    }

    #pattern {
        margin-top: -20vh;
        width: auto;
        position: relative;
        height: 100%;
    }

    #orange-text {
        height: 7.042253521126761vh;
        width: 50vw;
        font-size: 6vw;
        margin-top: 36.971830985915496vh;
        margin-left: 31.166666666666668vw;
    }

    #white-text {
        margin-right: 10.15vw;
        font-size: 4.5vw;
        height: 6.161971830985916vh;
        width: 70.111111111111114vw;
        margin-top: 45vh;
        margin-left: 16.5vw;
    }

    #papers {
        margin-top: 55.45774647887324vh;
        margin-left: 16.666666666666664vw;
        height: 35.2112676056338vh;
        width: 66.66666666666666vw;
    }

    #paper-image {
        width: 100%;
    }

    #hamburger-icon-group {
        width: 85vw;
        margin-left: 7vw;
    }
}

